# KBase

./: .gitattributes  .gitignore  AtExitManager.cpp  AtExitManager.h  CMakeLists.txt  KBase.sln  KBase.vcxproj  KBase.vcxproj.filters  KBase_Demo.sln  KBase_Demo.vcxproj  KBase_Demo.vcxproj.filters  Pickle.cpp  Pickle.h  README.md  ToolHelper.h  at_exit_manager.cpp  at_exit_manager.h  auto_reset.h  gen.py  gen_gtest.sh  gen_kbase.py  gen_kbase.sh  gen_test.py  gen_test.sh  kbase_structure_diagram.cd  logging.cpp  logging.h  main.cpp  scope_guard.h
.anvil/: configs.toml  project_rules.toml
Docs/: At Exit Manager.md  Autoreset.md  auto_reset_doc.md  base64.md  command_line.md  date_time_doc.md  error_exception_util.md  error_exception_util_doc.md  file_path_doc.md  file_util.md  logging.md  os_info.md  path_service_doc.md  pickle_doc.md
KBase_Test/: KBase_Test.vcxproj  KBase_Test.vcxproj.filters  ReadMe.txt  main.cpp
KBase_Test/samples/: at_exit_manager_unittest.cpp  auto_reset_unittest.cpp  base64_unittest.cpp  command_line_unittest.cpp  date_time_unittest.cpp  environment_unittest.cpp  error_exception_util_unittest.cpp  file_path_unittest.cpp  file_util_unittest.cpp  file_version_info_unittest.cpp  guid_unittest.cpp  lazy_unittest.cpp  logging_unittest.cpp  lru_cache_unittest.cpp  md5_unittest.cpp  path_service_unittest.cpp  path_unittest.cpp  pickle_unittest.cpp  registry_unittest.cpp  scoped_handle_unittest.cpp  sha_unittest.cpp  signals_unittest.cpp  singleton_unittest.cpp  string_format_unittest.cpp  string_util_unittest.cpp  string_view_unittest.cpp  sys_info_unittest.cpp  tokenizer_unittest.cpp  (+1 more)
cmake/: CompilerMSVC.cmake  CompilerUnix.cmake  compiler_msvc.cmake  compiler_posix.cmake
docs/: at_exit_manager.md  chrono_util.md  command_line.md  pickle.md  scope_guard.md  stack_walker.md  string_encoding_conversions.md  string_format.md  string_util.md  string_view.md  tokenizer.md
kbase/: CMakeLists.txt  at_exit_manager.cpp  at_exit_manager.h  auto_reset.h  base64.cpp  base64.h  base_path_provider.cpp  base_path_provider.h  basic_macros.h  basic_types.h  chrono_util.cpp  chrono_util.h  command_line.cpp  command_line.h  date_time.cpp  date_time.h  endian_utils.h  environment.cpp  environment.h  environment_posix.cpp  error_exception_util.cpp  error_exception_util.h  file_enumerator.cpp  file_enumerator.h  file_info.h  file_iterator.h  file_iterator_posix.cpp  file_path.cpp  file_path.h  file_util.cpp  file_util.h  file_util_posix.cpp  file_version_info.cpp  file_version_info.h  guid.cpp  guid.h  lazy.h  logging.cpp  logging.h  lru_cache.h  (+39 more)
kbase/files/: file_enumerator.cpp  file_enumerator.h  file_info.h  file_path.cpp  file_path.h  file_util.cpp  file_util.h  file_version_info.cpp  file_version_info.h
kbase/memory/: lazy.h  lru_cache.h  scoped_handle.h  singleton.h
kbase/strings/: string_format.cpp  string_format.h  string_piece.cpp  string_piece.h  string_util.cpp  string_util.h  sys_string_encoding_conversions.cpp  sys_string_encoding_conversions.h
src/: .ycm_extra_conf.py  CMakeLists.txt  KBase.vcxproj  KBase.vcxproj.filters
src/kbase/: at_exit_manager.h  base64.cpp  base_path_provider.cpp  base_path_provider.h  basic_macros.h  basic_types.h  chrono_util.cpp  chrono_util.h  command_line.cpp  command_line.h  date_time.h  environment.cpp  environment.h  error_exception_util.cpp  error_exception_util.h  file_enumerator.cpp  file_enumerator.h  file_info.h  file_iterator_posix.cpp  file_iterator_win.cpp  file_util.cpp  file_util.h  file_util_posix.cpp  file_version_info.cpp  file_version_info.h  guid.cpp  guid.h  logging.cpp  lru_cache.h  md5.cpp  md5.h  minidump.cpp  minidump.h  os_info.cpp  os_info.h  os_info_posix.cpp  os_info_win.cpp  path.cpp  path.h  path_service.cpp  (+23 more)
strings/: string_format.cpp  string_format.h  string_piece.cpp  string_piece.h  string_util.cpp  string_util.h  sys_string_encoding_conversions.cpp  sys_string_encoding_conversions.h
test/: .ycm_extra_conf.py  CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters  main.cpp  stdafx.cpp
test/samples/: at_exit_manager_unittest.cpp  auto_reset_unittest.cpp  base64_unittest.cpp  chrono_util_unittest.cpp  chrono_utils_unittest.cpp  command_line_unittest.cpp  date_time_unittest.cpp  debugger_unittest.cpp  enum_ops_unittest.cpp  environment_unittest.cpp  error_exception_util_unittest.cpp  file_iterator_unittest.cpp  file_util_unittest.cpp  file_version_info_unittest.cpp  guid_unittest.cpp  lazy_unittest.cpp  logging_unittest.cpp  lru_cache_unittest.cpp  md5_unittest.cpp  minidump_unittest.cpp  os_info_unittest.cpp  path_service_unittest.cpp  path_unittest.cpp  pickle_unittest.cpp  registry_unittest.cpp  scope_guard_unittest.cpp  scoped_handle_unittest.cpp  sha_unittest.cpp  signals_unittest.cpp  singleton_unittest.cpp  stack_walker_unittest.cpp  string_encoding_conversions_unittest.cpp  string_format_unittest.cpp  string_util_unittest.cpp  string_view_unittest.cpp  tokenizer_unittest.cpp
test/tests/: at_exit_manager_unittest.cpp  auto_reset_unittest.cpp  chrono_util_unittest.cpp  enum_ops_unittest.cpp  environment_unittest.cpp  error_exception_util_unittest.cpp  file_iterator_unittest.cpp  file_version_info_unittest.cpp  lazy_unittest.cpp  logging_unittest.cpp  lru_cache_unittest.cpp  minidump_unittest.cpp  os_info_unittest.cpp  path_unittest.cpp  pickle_unittest.cpp  scope_guard_unittest.cpp  scoped_handle_unittest.cpp  singleton_unittest.cpp  stack_walker_unittest.cpp  string_util_unittest.cpp  string_view_unittest.cpp  tokenizer_unittest.cpp
tests/: CMakeLists.txt  base64_unittest.cpp  chrono_util_unittest.cpp  command_line_unittest.cpp  debugger_unittest.cpp  endian_utils_unittest.cpp  error_exception_util_unittest.cpp  file_iterator_unittest.cpp  file_util_unittest.cpp  guid_unittest.cpp  lru_cache_unittest.cpp  main.cpp  md5_unittest.cpp  path_service_unittest.cpp  registry_unittest.cpp  scope_guard_unittest.cpp  scoped_handle_unittest.cpp  signals_unittest.cpp  string_encoding_conversions_unittest.cpp  string_format_unittest.cpp  string_util_unittest.cpp  string_view_unittest.cpp
